// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/rhsChannelBoardItem render board 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      
      <span
        class="title"
      >
        Test board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="description"
    />
    <div
      class="date"
    >
      Last update at: July 08, 2022, 8:10 PM
    </div>
  </div>
</div>
`;

exports[`components/rhsChannelBoardItem render board with menu open 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      <span
        class="icon"
      >
        i
      </span>
      <span
        class="title"
      >
        New board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper override menuOpened"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div />
              <div>
                <div
                  aria-label="Unlink board"
                  class="MenuOption TextOption menu-option menu-option--with-subtext menu-option--disabled"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-link-variant-off"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Unlink board
                    </div>
                    <div
                      class="menu-subtext text-75 mt-1"
                    >
                      You're not an admin of the board
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="description"
    >
      <p>
        <strong>
          Board
        </strong>
         with description
      </p>
    </div>
    <div
      class="date"
    >
      Last update at: July 08, 2022, 8:10 PM
    </div>
  </div>
</div>
`;
